@@ -1,3 +1,6 @@
+2018-02-20 17:25:00 Alessandro De Salvo
+	* Add new base minimal images
+
 2018-02-15 11:25:00 Alessandro De Salvo
 	* Fixed new HEP OS Libs
 
